Soluzione2.txt
source /opt/ros/humble/setup.bash
mkdir -p Esercizio2_ws/src
cd Esercizio2_ws/src
ls --> ottengo fault_detection  rosbag2_2024_11_27-15_00_23  sysmonitor_interfaces
colcon build --> fallisce 

(Starting >>> sysmonitor_interfaces
Finished <<< sysmonitor_interfaces [3.65s]                    
Starting >>> fault_detection
--- stderr: fault_detection                         
CMake Error at /opt/ros/humble/share/ament_cmake_target_dependencies/cmake/ament_target_dependencies.cmake:77 (message):
  ament_target_dependencies() the passed package name 'sysmonitor_interfaces'
  was not found before
Call Stack (most recent call first):
  CMakeLists.txt:21 (ament_target_dependencies)


---
Failed   <<< fault_detection [0.90s, exited with code 1]

Summary: 1 package finished [5.00s]
  1 package failed: fault_detection
  1 package had stderr output: fault_detection) , risolvo aggiungendo find_package(sysmonitor_interfaces REQUIRED) nel CMAKE (nome trovato da libreria nel codice cpp)
colcon build fallisce ancora (Starting >>> sysmonitor_interfaces
Finished <<< sysmonitor_interfaces [0.42s]                    
Starting >>> fault_detection
--- stderr: fault_detection                             
/home/vittorio/Esercizio2_ws/src/fault_detection/src/main.cpp:7:28: error: expected ‘;’ before ‘class’
    7 | using std::placeholders::_1
      |                            ^
      |                            ;
    8 | 
    9 | class MinimalSubscriber : public rclcpp::Node
      | ~~~~~                       
/home/vittorio/Esercizio2_ws/src/fault_detection/src/main.cpp:12:23: error: expected ‘;’ at end of member declaration
   12 |     MinimalSubscriber()
      |                       ^
      |                        ;
/home/vittorio/Esercizio2_ws/src/fault_detection/src/main.cpp:13:11: error: expected unqualified-id before string constant
   13 |      Node("minimal_subscriber")
      |           ^~~~~~~~~~~~~~~~~~~~
/home/vittorio/Esercizio2_ws/src/fault_detection/src/main.cpp:13:11: error: expected ‘)’ before string constant
   13 |      Node("minimal_subscriber")
      |          ~^~~~~~~~~~~~~~~~~~~~
      |           )
gmake[2]: *** [CMakeFiles/challenge2.dir/build.make:76: CMakeFiles/challenge2.dir/src/main.cpp.o] Errore 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/challenge2.dir/all] Errore 2
gmake: *** [Makefile:146: all] Errore 2
---
Failed   <<< fault_detection [2.28s, exited with code 2]

Summary: 1 package finished [2.99s]
  1 package failed: fault_detection
  1 package had stderr output: fault_detection)


risolvo aggiungendo ; linea 7 main e : linea 12 main
e aggiungendo find_package(sysmonitor_interfaces REQUIRED) al CMake

colcon build ha successo
source ./install/setup.bash 
ros2 run  fault_detection challenge2 --> 

non stampa nulla, ma da un'altra finestra di terminale (in cui ho fatto source ./install/setup.bash) osservo con ros2 node list che /minimal_subscriber sta andando. In particolare, con ros2 node info /minimal/subscriber trovo che: (Subscribers:
    /Orin_telemetry: sysmonitor_interfaces/msg/Sysmon
    /parameter_events: rcl_interfaces/msg/ParameterEvent
  Publishers:
    /parameter_events: rcl_interfaces/msg/ParameterEvent
    /rosout: rcl_interfaces/msg/Log
  Service Servers:
    /minimal_subscriber/describe_parameters: rcl_interfaces/srv/DescribeParameters
    /minimal_subscriber/get_parameter_types: rcl_interfaces/srv/GetParameterTypes
    /minimal_subscriber/get_parameters: rcl_interfaces/srv/GetParameters
    /minimal_subscriber/list_parameters: rcl_interfaces/srv/ListParameters
    /minimal_subscriber/set_parameters: rcl_interfaces/srv/SetParameters
    /minimal_subscriber/set_parameters_atomically: rcl_interfaces/srv/SetParametersAtomically
  Service Clients:

  Action Servers:

  Action Clients:)

devo caricare i dati con ros2 bag
creo, per comodità una cartella bag in cui metto i dati che ho:
mkdir bag
cd ~/Esercizio2_ws/src
mv ~/Esercizio2_ws/src/rosbag2_2024_11_27-15_00_23 ~/Esercizio2_ws/bag
cd ..
cd ~/Esercizio2_ws/bag
ros2 bag play rosbag2_2024_11_27-15_00_23_0/ 
il nodo viene chiuso: (terminate called after throwing an instance of 'std::invalid_argument'
  what():  FAULT DETECTION, ERROR! BOX BOX BOX
[ros2run]: Aborted)

il problema sta nella chiamata a magicfunction. Difatti, ponendola come commento e ricompilando (esce un warn che si toglie ponendo come commento anche & msg nella chiamata) la bag viene letta senza problemi. In particolare, std::invalid_argument, compare per magiclib.o, come si nota scrivendo a terminale nm magiclib.o

Ciò vuol dire che uno dei valori caricati dalla bag non rispetta dei limiti della magicfunction. Procedo così:
Modifico lo script del main cpp: in particolare, modifico la riga in cui è presente RCLCCP_INFO così:

RCLCPP_INFO(this->get_logger(), "I heard Orin Telemetry: %f cpu_usage , %f cpu_temp, %f ram_usage, %f gpu_usage, %f gpu_temp", msg.cpu_usage,msg.cpu_temp,msg.ram_usage,msg.gpu_usage,msg.gpu_temp);

così facendo leggo a terminale i valori che interessano la magicfunction. A questo punto, caricando la bag ottengo la seguente uscita: 

[INFO] [1765555460.736369615] [minimal_subscriber]: I heard Orin Telemetry: 95.000000 cpu_usage , 26.000000 cpu_temp, 16.000000 ram_usage, 3.000000 gpu_usage, 60.000000 gpu_temp
[INFO] [1765555460.878980724] [minimal_subscriber]: I heard Orin Telemetry: 82.000000 cpu_usage , 55.000000 cpu_temp, 29.000000 ram_usage, 48.000000 gpu_usage, 95.000000 gpu_temp
[INFO] [1765555461.129085755] [minimal_subscriber]: I heard Orin Telemetry: 5.000000 cpu_usage , 46.000000 cpu_temp, 6.000000 ram_usage, 67.000000 gpu_usage, 63.000000 gpu_temp
[INFO] [1765555461.378817511] [minimal_subscriber]: I heard Orin Telemetry: 90.000000 cpu_usage , 8.000000 cpu_temp, 10.000000 ram_usage, 68.000000 gpu_usage, 61.000000 gpu_temp
[INFO] [1765555461.628851652] [minimal_subscriber]: I heard Orin Telemetry: 93.000000 cpu_usage , 55.000000 cpu_temp, 25.000000 ram_usage, 51.000000 gpu_usage, 44.000000 gpu_temp
[INFO] [1765555461.881668759] [minimal_subscriber]: I heard Orin Telemetry: 51.000000 cpu_usage , 91.000000 cpu_temp, 20.000000 ram_usage, 35.000000 gpu_usage, 47.000000 gpu_temp
terminate called after throwing an instance of 'std::invalid_argument'
  what():  FAULT DETECTION, ERROR! BOX BOX BOX
[ros2run]: Aborted

osservo che il valore dell'ultima uscita di RCLCPP_INFO, ossia l'input che non piace a magicfunction, sembra essere cpu_temp, in quanto è quello che più degli altri si discosta da quelli precedenti. In effetti, procedendo per tentativi, sembra che la magicfunction causì la chiusura del programma se tali valori sono maggiori o uguali a 90. Risolvo cambiando i parametri della magicfunction:

magic_function(msg.cpu_usage,std::min(msg.cpu_temp, 89.0),msg.ram_usage,msg.gpu_usage,msg.gpu_temp);

così facendo, sto dando in ingresso al più il valore 89 e non ho problemi

Altrimenti, posso evitare l'abort usando try catch della libreria <stdexcept>:

try{
 	     magic_function(msg.cpu_usage,msg.cpu_temp,msg.ram_usage,msg.gpu_usage,msg.gpu_temp);

    } catch (const std::invalid_argument& e) {

       }

 

